fixed extra space above the content in block level callout

--- a/guide/src/css/style.scss
+++ b/guide/src/css/style.scss
@@ -569,7 +569,11 @@ code {
     	}
 
 	}
-
+    
+    p {
+        margin-top: 0;
+    }
+    
 	p:last-child {
     	margin-bottom: 0;
 	}
